# catlogger

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
catlogger/: catlogger.cpp  catlogger.h
test/: CMakeLists.txt  test.cpp
